# sql_parser

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: release.yaml  rust.yml
engines/processing/: Cargo.toml
engines/storage/: Cargo.toml
parser/: Cargo.toml
parser/src/: keywords.rs  token.rs
parser/src/tokenizer/: mod.rs
parser/test/: base_test.rs
sql-parser/: Cargo.toml  README.md  implementation-order-plan.md
sql-parser/src/: errors.rs  keywords.rs  lib.rs  token.rs
sql-parser/src/ast/: alter.rs  create.rs  delete.rs  drop.rs  explain.rs  insert.rs  mod.rs  mod2.rs  select.rs  sqlite.rs  trx.rs  update.rs
sql-parser/src/parser/: drop.rs  drop_statement_parser.rs  errors.rs  mod.rs  sqlite.rs  test_utils.rs  trx.rs
sql-parser/src/tokenizer/: errors.rs  mod.rs
sql-parser/tests/: tokenizer_blobs.rs  tokenizer_general.rs  tokenizer_identifiers.rs  tokenizer_keywords.rs  tokenizer_numbers.rs  tokenizer_operators.rs  tokenizer_strings.rs  tokenizer_variables.rs  tokenizer_whitespaces.rs
sql-parser/tests/common/: mod.rs
sqlite-parser/: Cargo.toml
sqlite-parser/src/: errors.rs  lib.rs  token.rs
sqlite-parser/src/tokenizer/: mod.rs
src/: keywords.rs  lib.rs  token.rs
src/ast/: alter.rs  create.rs  cte.rs  data_type.rs  delete.rs  drop.rs  explain.rs  expression.rs  insert.rs  mod.rs  ordering.rs  select.rs  sqlite.rs  trx.rs  update.rs
src/ast/expression/: between.rs  case.rs  frame_spec.rs  function.rs  identifier.rs  in_expression.rs  literal_value.rs  matching.rs  mod.rs  operations.rs  over_clause.rs  window_definition.rs
src/parser/: column_definition.rs  cte.rs  data_type.rs  drop.rs  errors.rs  expression.rs  identifier.rs  mod.rs  pratt_parser.rs  select.rs  sqlite.rs  trx.rs  window_definition.rs
src/parser/alter/: mod.rs
src/parser/column/: mod.rs
src/parser/create/: create_index.rs  create_table.rs  create_trigger.rs  create_view.rs  create_virtual_table.rs  mod.rs
src/parser/cte/: mod.rs
src/tokenizer/: errors.rs  mod.rs  test_utils.rs
tests/: tokenizer_blobs.rs  tokenizer_general.rs  tokenizer_identifiers.rs  tokenizer_keywords.rs  tokenizer_operators.rs
tests/bart-riers-sqlite-dataset/: README.md  main.rs
tests/codeschool-sqlite-parser-test-files/: README.md  main.rs  sqlite_parser.rs
tests/common/: mod.rs
tests/tokenizer/: main.rs  tokenizer_blobs.rs  tokenizer_general.rs  tokenizer_identifiers.rs  tokenizer_keywords.rs  tokenizer_numbers.rs  tokenizer_operators.rs  tokenizer_strings.rs  tokenizer_variables.rs  tokenizer_whitespaces.rs
(+52 files in other folders)
