[package]
name = "sql_parser"
authors = ["db-academy.io <admin@db-academy.io>"]
edition = "2021"
homepage = "https://db-academy.io"
repository = "https://github.com/db-academy-io/sql_parser"
license = "Apache-2.0"
readme = "README.md"
version = "0.0.1-alpha"

[dependencies]
bigdecimal = "=0.4.1"
bytes = "1.4"
chrono = { version = "0.4.38", default-features = false }
env_logger = "0.11"
log = "^0.4"
num_cpus = "1.13.0"
rand = "0.8"
regex = "1.8"
rstest = "0.23.0"
serde_json = "1"
tempfile = "3"
thiserror = "1.0.44"
url = "2.2"
once_cell = "1.20.2"

[dev-dependencies]
pre-commit-hooks = "0.3.0"

[profile.release]
lto = true
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
opt-level = 3
overflow-checks = false
panic = 'unwind'
rpath = false

[lints.clippy]
# Detects large stack-allocated futures that may cause stack overflow crashes (see threshold in clippy.toml)
large_futures = "warn"

[package.metadata.precommit]
fmt = "cargo fmt --check"
clippy = "cargo clippy"
