[package]
name = "sql_parser"
authors = ["db-academy.io <admin@db-academy.io>"]
edition = "2021"
homepage = "https://db-academy.io"
repository = "https://github.com/db-academy-io/sql_parser"
license = "Apache-2.0"
readme = "README.md"
version = "0.0.1"

[dependencies]
once_cell = "1.20.2"

[dev-dependencies]
pre-commit-hooks = "0.3.0"

[profile.release]
lto = true
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
opt-level = 3
overflow-checks = false
panic = 'unwind'
rpath = false

[lints.clippy]
# Detects large stack-allocated futures that may cause stack overflow crashes (see threshold in clippy.toml)
large_futures = "warn"

[package.metadata.precommit]
fmt = "cargo fmt --check"
clippy = "cargo clippy"

[profile.bench]
debug = true
