[package]
name = "db_academy_sql_parser"
authors = ["db-academy.io <admin@db-academy.io>"]
edition = "2021"
homepage = "https://db-academy.io/sql_parser"
repository = "https://github.com/db-academy-io/sql_parser"
license = "Apache-2.0"
readme = "README.md"
version = "0.0.1"
description = "An SQLite fully compatible tokenizer and parser written in Rust"

[dependencies]
once_cell = "1.20.2"

[dev-dependencies]
pre-commit-hooks = "0.3.0"

[profile.release]
lto = true
codegen-units = 16
debug = false
debug-assertions = false
incremental = false
opt-level = 3
overflow-checks = false
panic = 'unwind'
rpath = false

[package.metadata.precommit]
fmt = "cargo fmt --check"
clippy = "cargo clippy"

[profile.bench]
debug = true
